--- a/src/assets/styles/color.scss
+++ b/src/assets/styles/color.scss
@@ -41,3 +41,11 @@ $color-white: #ffffff;
 // ==============================================
 
 $error-red: #d73a01;
+
+$primary-color: #02b3e4;
+$secondary-color: #2d3c49;
+$light-gray: #f3f3f3;
+$medium-gray: #dbe2e8;
+$dark-gray: #525c65;
+$error-color: #ea5252;
+$success-color: #42b883;
