--- a/src/app/shared/components/elearning-button/elearning-button.component.scss
+++ b/src/app/shared/components/elearning-button/elearning-button.component.scss
@@ -2,39 +2,84 @@
 
 :host {
     .btn {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        padding: 12px 24px;
         border-radius: 4px;
-        width: 100%;
+        font-size: 16px;
+        font-weight: 600;
+        border: none;
         cursor: pointer;
-        &:hover {
-            opacity: 0.89;
+        transition: all 0.3s ease;
+        position: relative;
+        width: 100%;
+    }
+
+    .btn-primary {
+        background-color: #02b3e4;
+        color: white;
+    }
+
+    .btn-primary:hover:not(:disabled) {
+        background-color: #00a1cf;
+    }
+
+    .btn-secondary {
+        background-color: #2d3c49;
+        color: white;
+    }
+
+    .btn-secondary:hover:not(:disabled) {
+        background-color: #1e2a35;
+    }
+
+    .btn-outline {
+        background-color: transparent;
+        color: #02b3e4;
+        border: 2px solid #02b3e4;
+    }
+
+    .btn-outline:hover:not(:disabled) {
+        background-color: rgba(2, 179, 228, 0.1);
+    }
+
+    .btn:disabled {
+        opacity: 0.7;
+        cursor: not-allowed;
+    }
+
+    .btn-loading {
+        color: transparent !important;
+    }
+
+    .spinner {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 20px;
+        animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: translate(-50%, -50%) rotate(0deg);
+        }
+
+        100% {
+            transform: translate(-50%, -50%) rotate(360deg);
         }
     }
 
-    .disabled {
-        pointer-events: none;
-        opacity: 0.56;
+    .spinner svg {
+        width: 100%;
+        height: 100%;
     }
 
-    // .btn-primary {
-    //     color: $color-white;
-    //     background-color: $bg-color-primary;
-    // }
-
-    // .btn-secondary {
-    //     color: $color-white;
-    //     background-color: $bg-color-secondary;
-    // }
-
-    // .btn-tertiary {
-    //     color: $color-black1;
-    //     background-color: #fff;
-    // }
-
-    // .btn-quaternary {
-    //     color: 
-    // }
-
-    .btn-quinary {
-
+    .spinner circle {
+        stroke-dasharray: 60;
+        stroke-dashoffset: 45;
     }
 }
