--- a/src/app/shared/components/elearning-text-box/elearning-text-box.component.html
+++ b/src/app/shared/components/elearning-text-box/elearning-text-box.component.html
@@ -1,16 +1,50 @@
-<div class="textbox-container" [ngClass]="{'has-error': error, 'is-focused': isFocused}">
-    <label [for]="id" class="textbox-label" [ngClass]="{'label-float': value || isFocused}">
+<!-- src/app/shared/components/elearning-text-box/elearning-text-box.component.html -->
+<div class="relative mb-5">
+    <label [for]="id" class="absolute transition-all duration-300 left-3 pointer-events-none" [ngClass]="{
+             'text-xs -translate-y-3 bg-white px-1 top-0': value || isFocused,
+             'text-base top-1/2 -translate-y-1/2': !value && !isFocused,
+             'text-gray-600': !isFocused && !error,
+             'text-blue-500': isFocused && !error,
+             'text-red-500': error
+           }">
         {{ label }}
+        <span *ngIf="required" class="text-red-500 ml-1">*</span>
     </label>
 
-    <div class="input-container">
-        <input [type]="type" [id]="id" [disabled]="disabled" [placeholder]="placeholder" [value]="value"
-            (input)="onInputChange($event)" (focus)="onFocus()" (blur)="onBlur()" class="textbox-input" />
+    <div class="relative">
+        <input [type]="type" [id]="id" [disabled]="disabled" [placeholder]="isFocused ? placeholder : ''"
+            [value]="value" [autocomplete]="autocomplete" (input)="onInputChange($event)" (focus)="onFocus()"
+            (blur)="onBlur()" class="w-full px-3 py-4 border rounded-md transition-colors focus:outline-none" [ngClass]="{
+          'border-gray-300 focus:border-blue-500': !error && !disabled,
+          'border-red-500 focus:border-red-500': error,
+          'bg-gray-100 cursor-not-allowed': disabled
+        }" />
 
-        <div *ngIf="type === 'password'" class="toggle-password" (click)="togglePasswordVisibility()">
-            <i [class]="showPassword ? 'fa fa-eye-slash' : 'fa fa-eye'"></i>
-        </div>
+        <button *ngIf="type === 'password'" type="button"
+            class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700"
+            (click)="togglePasswordVisibility()">
+            <!-- Eye icon when password is hidden -->
+            <svg *ngIf="!showPassword" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+            </svg>
+            <!-- Eye-off icon when password is visible -->
+            <svg *ngIf="showPassword" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
+            </svg>
+        </button>
     </div>
 
-    <div *ngIf="error" class="error-message">{{ error }}</div>
+    <div *ngIf="error" class="mt-1 text-sm text-red-500">
+        {{ error }}
+    </div>
+
+    <div *ngIf="helperText && !error" class="mt-1 text-sm text-gray-500">
+        {{ helperText }}
+    </div>
 </div>
